# fastapi_app1

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2024_06_18_1237-e0091fffdce2_create_tables.py
src/api_v1/: __init__.py
src/api_v1/creature/: views.py
src/api_v1/endpoints/: creature.py  explorer.py
src/api_v1/explorer/: schemas.py  views.py
src/core/: config.py
src/core/models/: __init__.py  creature.py
src/db/: db_helper.py  init.sql
src/fake/: creature.py  explorer.py
src/models/: creature.py  explorer.py
src/schemas/: creature.py  explorer.py
src/service/: creature.py  explorer.py
tests/unit/service/: test_creature.py
